<resources>
    <string name="app_name">USTH Weather</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="paris">Paris</string>
    <string name="mon">Monday</string>
    <string name="tue">Tuesday</string>
    <string name="wed">Wednesday</string>
    <string name="thu">Thursday</string>
    <string name="fri">Friday</string>
    <string name="sat">Saturday</string>
    <string name="sun">Sunday</string>
    <string name="hanoi">Hanoi</string>
    <string name="france">France</string>
    <string name="toulouse">Toulouse</string>
    <string name="vietnam">Vietnam</string>
    <string name="refresh">Refresh</string>
    <string name="setting">Setting</string>
    <string name="hanoi_vietnam">Hanoi, Vietnam</string>
    <string name="paris_france">Paris, France</string>
    <string name="toulouse_france">Toulose, France</string>
    <string name="refresh_message">Refreshing</string>
    <string name="refresh_success">Successfully refreshed</string>
</resources>