<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ForecastFragment"
    tools:ignore="Extra Text">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="350dp">

        <!--Use LinearLayout to have the blue forecast area-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#ADD8E6"
            android:orientation="vertical"
            android:padding="8dp">

            <!--Monday-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="8dp">

                <TextView
                    android:layout_width="90dp"
                    android:layout_height="41dp"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:text="@string/mon" />

                <ImageView
                    android:layout_width="44dp"
                    android:layout_height="41dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:src="@drawable/sun_with_cloud" />

                <TextView
                    android:layout_width="122dp"
                    android:layout_height="41dp"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:text="Partly Cloudy\n24C - 31C" />
            </LinearLayout>

            <!--Tuesday-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="58dp"
                android:orientation="horizontal"
                android:padding="8dp">

                <TextView
                    android:layout_width="90dp"
                    android:layout_height="41dp"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:text="@string/tue" />

                <ImageView
                    android:layout_width="44dp"
                    android:layout_height="41dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:src="@drawable/rain" />

                <TextView
                    android:layout_width="122dp"
                    android:layout_height="41dp"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:text="Showers\n24C - 30C" />
            </LinearLayout>

            <!--Wednesday-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="58dp"
                android:orientation="horizontal"
                android:padding="8dp">

                <TextView
                    android:layout_width="90dp"
                    android:layout_height="41dp"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:text="@string/wed" />

                <ImageView
                    android:layout_width="44dp"
                    android:layout_height="41dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:src="@drawable/rain" />

                <TextView
                    android:layout_width="122dp"
                    android:layout_height="41dp"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:text="Rain\n22C - 23C" />
            </LinearLayout>

            <!--Thursday-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="58dp"
                android:orientation="horizontal"
                android:padding="8dp">

                <TextView
                    android:layout_width="90dp"
                    android:layout_height="41dp"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:text="@string/thu" />

                <ImageView
                    android:layout_width="44dp"
                    android:layout_height="41dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:src="@drawable/sun_with_rain" />

                <TextView
                    android:layout_width="190dp"
                    android:layout_height="41dp"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:text="Scattered Showers\n22C - 27C" />
            </LinearLayout>

            <!--Friday-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="58dp"
                android:orientation="horizontal"
                android:padding="8dp">

                <TextView
                    android:layout_width="90dp"
                    android:layout_height="41dp"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:text="@string/fri" />

                <ImageView
                    android:layout_width="44dp"
                    android:layout_height="41dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:src="@drawable/sun_rays_cloud" />

                <TextView
                    android:layout_width="190dp"
                    android:layout_height="41dp"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:text="Mostly Cloudy\n22C - 30C" />
            </LinearLayout>

            <!--Saturday-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="58dp"
                android:orientation="horizontal"
                android:padding="8dp">

                <TextView
                    android:layout_width="90dp"
                    android:layout_height="41dp"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:text="@string/sat" />

                <ImageView
                    android:layout_width="44dp"
                    android:layout_height="41dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:src="@drawable/sun_with_cloud" />

                <TextView
                    android:layout_width="122dp"
                    android:layout_height="41dp"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:text="Partly Cloudy\n24C - 31C" />
            </LinearLayout>

            <!--Sunday-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="58dp"
                android:orientation="horizontal"
                android:padding="8dp">

                <TextView
                    android:layout_width="90dp"
                    android:layout_height="41dp"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:text="@string/sun" />

                <ImageView
                    android:layout_width="44dp"
                    android:layout_height="41dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:src="@drawable/cloud_dark_lightning" />

                <TextView
                    android:layout_width="122dp"
                    android:layout_height="41dp"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:text="Thunderstorms\n25C - 28C" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>